# layers

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  index.html
.claude/commands/: commit.md
.cursor/rules/: changelog.mdc
docs/: user-guide.md
macos/: AppIcon.icns  Info.plist  create_icns.sh
src/: aggregate_device.rs  audio.rs  browser.rs  clipboard.rs  component.rs  context_menu.rs  effects.rs  events.rs  export.rs  gpu.rs  grid.rs  group.rs  history.rs  icons.rs  instruments.rs  layers.rs  lib.rs  main.rs  midi.rs  midi_keyboard.rs  operations.rs  overlap.rs  palette.rs  paulstretch.rs  plugins.rs  project.rs  regions.rs  rendering.rs  settings.rs  share_id.rs  storage.rs  surreal_client.rs  takes.rs  text_note.rs  theme.rs  types.rs  user.rs  waveform.rs
src/events/: commands.rs  cursor.rs  keyboard.rs  mod.rs  mouse.rs  redraw.rs  scroll.rs
src/storage/: conversions.rs  mod.rs  models.rs  remote.rs
src/tests/: arrow_nudge.rs  browser.rs  cross_type_overlap.rs  effect_chains.rs  groups.rs  history.rs  hit_testing.rs  latency_compensation.rs  layers.rs  metronome.rs  midi_and_instruments.rs  mod.rs  monitoring.rs  operations.rs  palette.rs  playhead_indicator.rs  plugin_sync.rs  plugins.rs  reconnect.rs  recording_playback.rs  right_window.rs  selection.rs  session.rs  settings.rs  solo_mute.rs  state_mutations.rs  storage_roundtrip.rs  takes.rs  text_notes.rs  vertical_snap.rs  (+1 more)
vst3-gui/: Cargo.toml  build.rs
vst3-gui/cpp/: CMakeLists.txt
vst3-gui/cpp/include/: vst3_gui.h
vst3-gui/cpp/src/: vst3_gui.mm  vst3_gui_mac.mm
(+26 files in other folders)
